--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+*{
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Sign{
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.navigation{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 12px;
+    background-color: rgb(56, 54, 54);
+    flex-direction: row;
+    color: white;
+}
+.user_image{
+    border-radius: 999px;
+    height: 50px;
+    width: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.product{
+    width: 300px;
+    height: 300px;
+    border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.page{
+    margin-top: 30px;
+    border: 2px solid black;
+    padding: 3px;
+    border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.price{
+    color: orangered;
+    font-size: 25px;
+    font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close{
+    cursor: pointer;
 }
